# blue-candle

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: cargo.yml  ci.yml  release.yml
assets/: README.md
models/: README.md  ipcam-general-v8l.yaml  pt_to_safetensors.py  yolov8n.safetensors
src/: api.rs  detector.rs  lib.rs  main.rs  model.rs  server.rs  server_stats.rs  system_info.rs  utils.rs  worker.rs
