[package]
name = "blue-candle"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]

default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dependencies]
ab_glyph = "0"
anyhow = "1"
axum = { version = "0", features = ["multipart"] }
candle-core = "0"
candle-nn = "0"
clap = { version = "4", features = ["derive"] }
fast_image_resize = "4"
futures = "0"
hf-hub = { version = "0", features = ["tokio"] }
image = "0"
imageproc = "0"
intel-mkl-src = { version = "0", optional = true }
num_cpus = "1"
nvml-wrapper = "0.10.0"
raw-cpuid = "11"
reqwest = { version = "0", features = ["stream", "multipart", "json"] }
rusttype = "0"
serde = "1"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync"
] }
tokio-util = { version = "0", features = ["codec"] }
tracing = "0"
tracing-appender = "0"
tracing-subscriber = "0"
uuid = { version = "1", features = ["v4"] }
zune-jpeg = "0"
zune-core = "0"

[target.'cfg(windows)'.dependencies]
ansi_term = "0"
windows-service = "0"
